changed boxes & buttons

--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -109,7 +109,7 @@
                   <br>
                   <h2> So where does all of this money go? </h2>
                   <br>
-                  <h3> <a href='#section1' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section1' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section3' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -123,7 +123,7 @@
                     <div id="chart_div_1"></div>
                   </body>
                   <h1> Wow! That's a lot to get a handle on. Let's simplify it a bit. </h1>
-                  <h3> <a href='#section2' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section2' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section4' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -137,7 +137,7 @@
                   </body>
                   <br>
                   <br>
-                  <h3> <a href='#section3' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section3' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section5' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -150,7 +150,7 @@
                       and other essential government services.
                   </h3>
                   <h2> Translating your tax bill to a percentage of market value allows us to compare tax bills across communities, apples-to-apples.</h2>
-                  <h3> <a href='#section4' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section4' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section6' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -160,7 +160,7 @@
                   <div class='main' id='section6'>
                   <h3> In exchange for paying property taxes, residents of {{ township }} enjoy high quality public services. However, tax rates can vary a lot within the same township. </h3>
                   <p> See how your neighborhood compares to others in your township </p>
-                  <h3> <a href='#section5' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section5' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section7' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -181,7 +181,7 @@
                   <br>
                   <br>
                   <p> How do your taxes compare to elsewhere in Cook County? </p>
-                  <h3> <a href='#section6' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section6' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section8' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -201,7 +201,7 @@
                     {% endif %}
                   <br>
                   <br>
-                  <h3> <a href='#section7' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section7' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section9' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -218,7 +218,7 @@
                   <br>
                     <p> See how your taxes have changed over time </p>
                   <br>
-                  <h3> <a href='#section8' class='btn btn-primary btn-lg'> Back </a> </h3>
+                  <h3> <a href='#section8' class='btn btn-primary disabled'> Back </a> </h3>
                   <h3> <a href='#section10' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -238,7 +238,7 @@
                   </body>
 
                     <h2> The change may not seem big, but it adds up! </h2>
-                    <h3> <a href='#section9' class='btn btn-primary btn-lg'> Back </a> </h3>
+                    <h3> <a href='#section9' class='btn btn-primary disabled'> Back </a> </h3>
                     <h3> <a href='#section11' class='btn btn-primary btn-lg'> Next </a> </h3>
                   </div>
 
@@ -250,7 +250,7 @@
                     <br>
                     <h3> Not satisfied with your tax situation? Think your community should spend on better services?
                          Call your representatives, city council or mayor, and don't forget to vote in your local elections! </h3>
-                    <h3> <a href='#http://sawyerm.pythonanywhere.com/cctaxes' class='btn btn-primary btn-lg'> Search Another Address </a> </h3>
+                    <h3> <a href='http://sawyerm.pythonanywhere.com/cctaxes' class='btn btn-primary btn-lg'> Search Another Address </a> </h3>
                   </div>
 
 
