--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -90,7 +90,7 @@
                   <h3> We all know what a property tax bill looks like </h3>
                   <h3> It shows you the amount you owe for your next payment (about ${{payment}}), your community's tax rate ({{tax_code_rate}}%) and a list of government agencies that receive your money. </h3>
                   <h2> But where do those numbers come from? {{tax_code_rate}}% of what? </h2>
-                  <h3> <a href='#section2' class='btn btn-primary btn-lg'> Learn more </a> </h3>
+                  <h3> <a href='#section2' button type="button" class="btn btn-primary btn-lg btn-block"> Learn more </a> </h3>
                 </div>
 
                 <br>
@@ -109,8 +109,8 @@
                   <br>
                   <h2> So where does all of this money go? </h2>
                   <br>
-                  <h3> <a href='#section1' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section3' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section1' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section3' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -123,8 +123,8 @@
                     <div id="chart_div_1"></div>
                   </body>
                   <h1> Wow! That's a lot to get a handle on. Let's simplify it a bit. </h1>
-                  <h3> <a href='#section2' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section4' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section2' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section4' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -137,8 +137,8 @@
                   </body>
                   <br>
                   <br>
-                  <h3> <a href='#section3' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section5' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section3' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section5' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -150,8 +150,8 @@
                       and other essential government services.
                   </h3>
                   <h2> Translating your tax bill to a percentage of market value allows us to compare tax bills across communities, apples-to-apples.</h2>
-                  <h3> <a href='#section4' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section6' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section4' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section6' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -160,8 +160,8 @@
                   <div class='main' id='section6'>
                   <h3> In exchange for paying property taxes, residents of {{ township }} enjoy high quality public services. However, tax rates can vary a lot within the same township. </h3>
                   <p> See how your neighborhood compares to others in your township </p>
-                  <h3> <a href='#section5' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section7' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section5' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section7' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -181,8 +181,8 @@
                   <br>
                   <br>
                   <p> How do your taxes compare to elsewhere in Cook County? </p>
-                  <h3> <a href='#section6' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section8' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section6' 'class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section8' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -201,8 +201,8 @@
                     {% endif %}
                   <br>
                   <br>
-                  <h3> <a href='#section7' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section9' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section7' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section9' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -218,8 +218,8 @@
                   <br>
                     <p> See how your taxes have changed over time </p>
                   <br>
-                  <h3> <a href='#section8' class='btn btn-primary disabled'> Back </a> </h3>
-                  <h3> <a href='#section10' class='btn btn-primary btn-lg'> Next </a> </h3>
+                  <h3> <a href='#section8' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section10' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -238,8 +238,8 @@
                   </body>
 
                     <h2> The change may not seem big, but it adds up! </h2>
-                    <h3> <a href='#section9' class='btn btn-primary disabled'> Back </a> </h3>
-                    <h3> <a href='#section11' class='btn btn-primary btn-lg'> Next </a> </h3>
+                    <h3> <a href='#section9' class="btn btn-outline-primary"> Back </a> </h3>
+                    <h3> <a href='#section11' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
                   </div>
 
                   <br>
@@ -250,7 +250,7 @@
                     <br>
                     <h3> Not satisfied with your tax situation? Think your community should spend on better services?
                          Call your representatives, city council or mayor, and don't forget to vote in your local elections! </h3>
-                    <h3> <a href='http://sawyerm.pythonanywhere.com/cctaxes' class='btn btn-primary btn-lg'> Search Another Address </a> </h3>
+                    <h3> <a href='http://sawyerm.pythonanywhere.com/cctaxes' button type="button" class="btn btn-primary btn-lg btn-block"> Search Another Address </a> </h3>
                   </div>
 
 
