--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -117,9 +117,16 @@
       background-color: white;
     }
 
-    #section11 {
-      height: 800px;
-      background-color: white;
+
+    body {
+      background: #555;
+    }
+
+    .content {
+      max-width: 1600px;
+      margin: auto;
+      background: white;
+      padding: 10px;
     }
 
 
@@ -138,7 +145,7 @@
 
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cook County <br> <b>Property Tax 1-2-3</b> </h1>
+    <h1 class="cover-heading" >Cook County <br> <b>Property Tax 1-2-3</b> </h1>
     <br>
     <h3 class="masthead-brand"> Cook County homeowners pay property taxes every year, but the process can seem like a black box.</h3>
 
