--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -28,8 +28,8 @@
 
         // Set chart options
         var options = {'title':'',
-                       'width':1200,
-                       'height':600,
+                       'width':1400,
+                       'height':450,
                       }
 
 
@@ -49,8 +49,8 @@
 
         // Set chart options
         var options = {'title':'',
-                       'width':1200,
-                       'height':600,
+                       'width':1400,
+                       'height':450,
                       }
 
 
@@ -87,10 +87,14 @@
 
           <div class="page-content">
                 <div class='main' id='section1'>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
                   <h3> We all know what a property tax bill looks like </h3>
                   <h3> It shows you the amount you owe for your next payment (about ${{payment}}), your community's tax rate ({{tax_code_rate}}%) and a list of government agencies that receive your money. </h3>
                   <h2> But where do those numbers come from? {{tax_code_rate}}% of what? </h2>
-                  <h3> <a href='#section2' button type="button" class="btn btn-primary btn-lg btn-block"> Learn more </a> </h3>
+                  <h3> <a href='#section2' class="btn btn-primary"> Learn more </a> </h3>
                 </div>
 
                 <br>
@@ -98,6 +102,8 @@
 
 
                   <div class='main' id='section2'>
+                    <br>
+                    <br>
                   <h2><b> Your address is located in tax code {{ prop_tax_code }} </b></h2>
                   <h2> Using this tax code, we can translate the rate you see on your property tax bill into an adjusted tax rate that reflects
                        the percentage of <b>full market value</b> that homeowners in your neighborhood pay every year.
@@ -110,147 +116,155 @@
                   <h2> So where does all of this money go? </h2>
                   <br>
                   <h3> <a href='#section1' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section3' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section3' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section3'>
+                    <br>
+                    <br>
                   <h3> Your property taxes fund <b>{{ body_count }}</b> different local government bodies.</h3>
-                  <body>
+                  <body class="content">
                     <!--Div that will hold the pie chart-->
                     <div id="chart_div_1"></div>
                   </body>
                   <h1> Wow! That's a lot to get a handle on. Let's simplify it a bit. </h1>
                   <h3> <a href='#section2' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section4' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section4' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section4'>
-                  <body>
-                    <!--Div that will hold the pie chart-->
+                    <br>
+                    <br>
+                    <h1> A majority of your tax bill funds primary and secondary schools, but a lot goes to city, county and township governments as well. </h1>
+                    <h2> Your tax code may allocate a large amount of funding to other agencies as well. </h2>
+
+                  <body class="content">
                     <div id="chart_div_2"></div>
                   </body>
-                  <br>
-                  <br>
+
+                  <h3> Each year, {{ effective_property_tax_rate }} cents out of every dollar of your home's value go to fund public schools, parks
+                       and other essential government services.
+                  </h3>
                   <h3> <a href='#section3' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section5' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section5' class="btn btn-primary"> Next </a> </h3>
+
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section5'>
-
-                  <h3> Each year, {{ effective_property_tax_rate }} cents out of every dollar of your home's value go to fund public schools, parks
-                      and other essential government services.
-                  </h3>
+                    <br>
+                    <br>
                   <h2> Translating your tax bill to a percentage of market value allows us to compare tax bills across communities, apples-to-apples.</h2>
+                  <br>
+                  <h3> In exchange for paying property taxes, residents of {{ township }} enjoy high quality public services. However, tax rates can vary a lot within the same township. </h3>
+                    <br>
+                  <h3> Keep going to see how your neighborhood compares to others in your township </h3>
+                  <br>
                   <h3> <a href='#section4' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section6' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section6' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
-                  <br>
-                  <br>
 
                   <div class='main' id='section6'>
-                  <h3> In exchange for paying property taxes, residents of {{ township }} enjoy high quality public services. However, tax rates can vary a lot within the same township. </h3>
-                  <p> See how your neighborhood compares to others in your township </p>
+                    <br>
+                    <br>
+                  <h2> Property taxes in {{ township }} range from {{ township_min }}% to {{ township_max }}% </h2>
+                  <br>
+                  <br>
+                    {% if greater_township %}
+                      <h2> In your tax code, you pay more than average in {{ township }} </h2>
+                    {% elif lesser_township %}
+                      <h2> In your tax code, you pay less than average in {{ township }} </h2>
+                    {% else %}
+                      <h2> In your tax code, you pay an average amount in {{ township }} </h2>
+                    {% endif %}
+                  <br>
+                  <br>
+                  <h3> Click next to see How your taxes compare to elsewhere in Cook County </h3>
+                  <br>
                   <h3> <a href='#section5' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section7' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section7' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section7'>
-                  <h3> Property taxes in {{ township }} range from {{ township_min }}% to {{ township_max }}% </h3>
+                    <br>
+                    <br>
+                    <h3>The average homeowner in Cook County pays {{ cook_county_avg_etr }}% of their home's value in taxes annually.</h3>
                   <br>
                   <br>
-                    {% if greater_township %}
-                      <h2> You pay more than average in {{ township }} </h2>
-                    {% elif lesser_township %}
-                      <h2> You pay less than average in {{ township }} </h2>
+                    {% if greater_county %}
+                      <h2> Therefore, your tax rate is higher than average, compared to the entire county </h2>
+                    {% elif lesser_county %}
+                      <h2> Therefore, your tax rate is lower than average, compared to the entire countyy </h2>
                     {% else %}
-                      <h2> You pay an average amount in {{ township }} </h2>
+                      <h2> Therefore, your tax rate is right about average, compared to the entire county </h2>
                     {% endif %}
                   <br>
                   <br>
-                  <p> How do your taxes compare to elsewhere in Cook County? </p>
-                  <h3> <a href='#section6' 'class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section8' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section6' class="btn btn-outline-primary"> Back </a> </h3>
+                  <h3> <a href='#section8' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section8'>
-                    <h3>The average homeowner in Cook County pays {{ cook_county_avg_etr }}% of their home's value in taxes annually.</h3>
+                    <br>
+                    <br>
+                    <h2> Remember, since we are comparing tax rates as percentages of property value, even if you have a lower rate than someone in another town,
+                         your tax bill may still be higher.
+                    </h2>
                   <br>
                   <br>
-                    {% if greater_county %}
-                      <h2> So you pay more than average in your county </h2>
-                    {% elif lesser_county %}
-                      <h2> So you pay less than average in your county </h2>
-                    {% else %}
-                      <h2> So you pay an average amount in your county </h2>
-                    {% endif %}
+                    <h3> Over time, things change. While you pay {{ effective_property_tax_rate }}% of your home's value today, your tax bills probably looked different a few years ago.</h3>
                   <br>
+                    <h3> See how your taxes have changed over time </h3>
                   <br>
                   <h3> <a href='#section7' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section9' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <h3> <a href='#section9' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section9'>
-                    <h3> Since we are comparing tax rates as percentages of property value, even if you have a lower rate than someone in another town,
-                         your tax bill may still be higher.
-                    </h3>
+                    <br>
+                    <br>
+                  <h1> Over the last three years, your taxes have gone down {{ tax_code_change }}%. </h1>
+                  <h3> During this same period, taxes as a percentage of average home values across the county have fallen {{ county_change }}%. </h3>
                   <br>
-                  <br>
-                    <h3>  Over time, things change. While you pay {{ effective_property_tax_rate }}% of your home's value today, your tax bills probably looked different a few years ago.</h3>
-                  <br>
-                    <p> See how your taxes have changed over time </p>
-                  <br>
-                  <h3> <a href='#section8' class="btn btn-outline-primary"> Back </a> </h3>
-                  <h3> <a href='#section10' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
+                  <body class="content">
+                    <div id="chart_div_3" style="width: 400px; height: 450px;"></div>
+                  </body>
+
+                    <h2> The change may not seem big, but it adds up! </h2>
+                    <h3> <a href='#section8' class="btn btn-outline-primary"> Back </a> </h3>
+                    <h3> <a href='#section10' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
                   <br>
                   <br>
 
                   <div class='main' id='section10'>
-                  <p> Over the last three years, your taxes have gone down {{ tax_code_change }}%. </p>
-                  <p> During this same period, taxes as a percentage of average home values across the county have fallen {{ county_change }}%. </p>
-
-                  <br>
-                  <br>
-
-                  <body>
-                    <!--Div that will hold the pie chart-->
-                    <div id="chart_div_3" style="width: 400px; height: 500px;"></div>
-                  </body>
-
-                    <h2> The change may not seem big, but it adds up! </h2>
-                    <h3> <a href='#section9' class="btn btn-outline-primary"> Back </a> </h3>
-                    <h3> <a href='#section11' button type="button" class="btn btn-primary btn-lg btn-block"> Next </a> </h3>
-                  </div>
-
-                  <br>
-                  <br>
-
-                  <div class='main' id='section11'>
-                    <h3> Thanks for taking the time to learn about your taxes with Property Tax 1-2-3! If this resource was helpful, please share with your friends and neighbors. </h3>
                     <br>
-                    <h3> Not satisfied with your tax situation? Think your community should spend on better services?
-                         Call your representatives, city council or mayor, and don't forget to vote in your local elections! </h3>
-                    <h3> <a href='http://sawyerm.pythonanywhere.com/cctaxes' button type="button" class="btn btn-primary btn-lg btn-block"> Search Another Address </a> </h3>
+                    <br>
+                    <h1> Thanks for taking the time to learn about your taxes with Property Tax 1-2-3! If this resource was helpful, please share with your friends and neighbors. </h1>
+                    <br>
+                    <h2> Not satisfied with your tax situation? Think your community should spend on better services?
+                         Call your representatives, city council or mayor, and don't forget to vote in your local elections! </h2>
+                      <br>
+                    <h2> <a href='http://sawyerm.pythonanywhere.com/cctaxes' class="btn btn-primary btn-lg"> Search Another Address </a> </h2>
                   </div>
 
 
