--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -119,7 +119,7 @@
                   <div class='main' id='section3'>
                     <br>
                   <h3> Your property taxes fund <b>{{ body_count }}</b> different local government bodies.</h3>
-                  <body class="content">
+                  <body>
                     <!--Div that will hold the pie chart-->
                     <div id="chart_div_1"></div>
                   </body>
@@ -135,7 +135,7 @@
                     <h1> A majority of your tax bill funds primary and secondary schools, but a lot goes to city, county and township governments as well. </h1>
                     <h2> Your tax code may allocate a large amount of funding to other agencies as well. </h2>
 
-                  <body class="content">
+                  <body>
                     <div id="chart_div_2"></div>
                   </body>
 
@@ -227,7 +227,7 @@
                   <h1> Over the last three years, your taxes have gone down {{ tax_code_change }}%. </h1>
                   <h3> During this same period, taxes as a percentage of average home values across the county have fallen {{ county_change }}%. </h3>
                   <br>
-                  <body class="content">
+                  <body>
                     <div id="chart_div_3" style="width: 400px; height: 450px;"></div>
                   </body>
 
