--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -29,7 +29,7 @@
         // Set chart options
         var options = {'title':'',
                        'width':1400,
-                       'height':400,
+                       'height':450,
                       }
 
 
@@ -50,7 +50,7 @@
         // Set chart options
         var options = {'title':'',
                        'width':1400,
-                       'height':400,
+                       'height':450,
                       }
 
 
@@ -94,7 +94,11 @@
                   <h3> <a href='#section2' class="btn btn-primary"> Learn more </a> </h3>
                   <br>
                   <br>
+                  <br>
                 </div>
+
+                <br>
+                <br>
 
 
                   <div class='main' id='section2'>
@@ -115,9 +119,12 @@
                   <h3> <a href='#section3' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section3'>
                     <br>
+
                   <h3> Your property taxes fund <b>{{ body_count }}</b> different local government bodies.</h3>
                   <body>
                     <!--Div that will hold the pie chart-->
@@ -129,8 +136,11 @@
                   <h3> <a href='#section4' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section4'>
+                    <br>
                     <br>
                     <h1> A majority of your tax bill funds primary and secondary schools, but a lot goes to city, county and township governments as well. </h1>
                     <h2> Your tax code may allocate a large amount of funding to other agencies as well. </h2>
@@ -147,6 +157,8 @@
 
                   </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section5'>
                     <br>
@@ -181,11 +193,12 @@
                   <br>
                   <h3> <a href='#section5' class="btn btn-outline-primary"> Back </a> </h3>
                   <h3> <a href='#section7' class="btn btn-primary"> Next </a> </h3>
+                  </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section7'>
-                    <br>
-                    <br>
                     <br>
                     <br>
                     <h3>The average homeowner in Cook County pays {{ cook_county_avg_etr }}% of their home's value in taxes annually.</h3>
@@ -199,10 +212,13 @@
                       <h2> Therefore, your tax rate is right about average, compared to the entire county </h2>
                     {% endif %}
                   <br>
+                  <br>
                   <h3> <a href='#section6' class="btn btn-outline-primary"> Back </a> </h3>
                   <h3> <a href='#section8' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section8'>
                     <br>
@@ -220,6 +236,8 @@
                   <h3> <a href='#section9' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section9'>
                     <br>
@@ -227,16 +245,17 @@
                   <h1> Over the last three years, your taxes have gone down {{ tax_code_change }}%. </h1>
                   <h3> During this same period, taxes as a percentage of average home values across the county have fallen {{ county_change }}%. </h3>
                   <br>
-                  <body>
+                  <body class="content">
                     <div id="chart_div_3" style="width: 400px; height: 450px;"></div>
                   </body>
 
                     <h2> The change may not seem big, but it adds up! </h2>
-                    <br>
                     <h3> <a href='#section8' class="btn btn-outline-primary"> Back </a> </h3>
                     <h3> <a href='#section10' class="btn btn-primary"> Next </a> </h3>
                   </div>
 
+                  <br>
+                  <br>
 
                   <div class='main' id='section10'>
                     <br>
