--- a/il_gov_counter/cctaxes/templates/cctaxes/results.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/results.html
@@ -192,7 +192,7 @@
                   <br>
                   <br>
                   <br>
-                  <h3> Click next to see How your taxes compare to elsewhere in Cook County </h3>
+                  <h3> Click next to see how your taxes compare to the rest of Cook County </h3>
                   <br>
                   <h3> <a href='#section5' class="btn btn-outline-primary"> Back </a> </h3>
                   <h3> <a href='#section7' class="btn btn-primary"> Next </a> </h3>
@@ -217,7 +217,6 @@
                       <h2> Therefore, your tax rate is right about average, compared to the entire county </h2>
                     {% endif %}
                   <br>
-                  <h2> Keep going to find out whether your taxers have gone up or down over the past three years. </h2>
                   <br>
                   <h3> <a href='#section6' class="btn btn-outline-primary"> Back </a> </h3>
                   <h3> <a href='#section8' class="btn btn-primary"> Next </a> </h3>
@@ -249,7 +248,6 @@
 
                   <div class='main' id='section9'>
                     <br>
-                    <br>
                   <h1> Over the last three years, your taxe rate has gone down {{ tax_code_change }}%. </h1>
                   <h3> During this same period, taxes as a percentage of average home values across the county have fallen {{ county_change }}%. </h3>
                   <br>
@@ -258,7 +256,6 @@
                   </body>
 
                     <h2> The change may not seem big, but it adds up! </h2>
-                    <br>
                     <br>
                     <h3> <a href='#section8' class="btn btn-outline-primary"> Back </a> </h3>
                     <h3> <a href='#section10' class="btn btn-primary"> Next </a> </h3>
@@ -274,6 +271,10 @@
                     <br>
                     <h2> Not satisfied with your tax situation? Think your community should spend on better services?
                          Call your representatives, city council or mayor, and don't forget to vote in your local elections! </h2>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
                       <br>
                     <h2> <a href='http://sawyerm.pythonanywhere.com/cctaxes' class="btn btn-primary btn-lg"> Search Another Address </a> </h2>
                   </div>
